Added "firebase/DatabaseService" to support Firebase REST API

--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,4 @@
-application: iot-https-relay-firebase
-version: 1
-runtime: php
+runtime: php55
 api_version: 1
 threadsafe: yes
 
@@ -11,6 +9,9 @@ handlers:
 
 - url: /
   script: index.html
+
+- url: /firebase/DatabaseService.*
+  script: /firebase/Firebase.php
 
 - url: /twilio/Messages.*
   script: /twilio/Messages.php
